# StructralAnalysis

./: .readthedocs.yaml  pyproject.toml
SpaceFrame/: FrameStructure.py  GlobalCoord.py  LineElements.py  Loads.py  Materials.py  Nodes.py  PostProcess.py  Sections.py  Solver.py  StiffnessMatrix.py  TransMatrix.py  __init__.py  test.ipynb  test.py  test2.py
docs/: SpaceFrame.rst  modules.rst
docs/source/: conf.py  index.rst
